* 2013-11-04 - thorben.betten@open-xchange.com

 - Fix for bug 27721: Improved parsing of an IMAP folder's capability to store user flags

* 2013-10-31 - marc.arens@open-xchange.com

 - Fix for bug 25994: Expose basic realtime components via jmx
 - Fix for bug 29103: Use ComponentHandles singlethreaded
 
* 2013-10-31 - tobias.friedrich@open-xchange.com

 - Fix for bug 29554: Introduced 'supported-calendar-component-sets' property for CalDAV collections

* 2013-10-31 - thorben.betten@open-xchange.com

 - Fix for bug 29598: Assume that subfolder creation basically works if returned NO response from IMAP server signals some kind of exceeded quota error
 - Fix for bug 27611: Deny generation of preview or provide default thumbnail image in case of an empty file holder

* 2013-10-30 - martin.schneider@open-xchange.com

 - Fix for bug 29240: Removed unnecessary creation of UUID for contacts from csv import
 - Fix for bug 29108: Changed logged output for commands

* 2013-10-30 - thorben.betten@open-xchange.com

 - Fix for bug 29512: Fixed associated Microformat publication template and applied proper timeout
 - Fix for bug 29561: Added null guards to reporting tool if 'Orchestration' has no last report available

* 2013-10-29 - thorben.betten@open-xchange.com

 - Fix for bug 29516: Do not store password in IMAP store cache
 - Fix for bug 29518: Collect addresses on read access to unread/unseen messages
 - Fix for bug 29519: No public folder check for InfoStore folders
 - Fix for bug 29564: Check for presence of "Content-Length" header prior to attempting to check it

* 2013-10-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 29205: Use 'universalchardet' charset detection library
 - Fix for bug 29529: Made 'validate_contact_email' setting available via 'io.ox/core//features/validateMailAddresses'

* 2013-10-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 24642: Resolve participant information for shared calendar folders as needed