@@ -1,3 +1,7 @@
+* 2013-11-04 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 29628: Make 'validate_contact_email' available in config tree, so it becomes visible for JSlob mapping
+
 * 2013-11-04 - thorben.betten@open-xchange.com
 
  - Fix for bug 27721: Improved parsing of an IMAP folder's capability to store user flags
